--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^10.0.0",
     "mongoose": "^5.13.8",
     "express-rate-limit": "^5.3.0",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "jsonwebtoken": "^8.5.1"
   }
 }
