--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "mongoose": "^5.13.8",
+    "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^5.13.8",
     "node-cron": "^2.0.3",
-    "jsonwebtoken": "^8.5.1"
+    "bcryptjs": "^2.4.3"
   }
 }
